# mnexa

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/mnexa/: cli.py  ingest.py  lint.py  parser.py  query.py  storage.py
src/mnexa/drive/: __init__.py  auth.py  client.py
src/mnexa/github/: __init__.py  auth.py  client.py
src/mnexa/granola/: __init__.py  auth.py  client.py
src/mnexa/llm/: __init__.py  base.py  gemini.py
src/mnexa/parsers/: __init__.py  docx.py  pdf.py
src/mnexa/prompts/: __init__.py  lint.md  query.md  stage1.md  stage2.md
src/mnexa/templates/: CLAUDE.md  gitignore  index.md
tests/: fakes.py  test_cli.py  test_granola.py  test_ingest.py  test_init.py  test_lint.py  test_parser.py  test_query.py  test_storage.py
