[project]
name = "mnexa"
version = "0.0.1"
description = "A disciplined wiki maintainer for a personal markdown knowledge base."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "jiashuoz", email = "jszjosh@gmail.com"}]
keywords = ["llm", "wiki", "knowledge-base", "obsidian", "markdown", "rag", "gemini"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "google-genai>=1.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "typer>=0.12",
]

[project.urls]
Homepage = "https://github.com/jiashuoz/mnexa"
Repository = "https://github.com/jiashuoz/mnexa"
Issues = "https://github.com/jiashuoz/mnexa/issues"

[project.scripts]
mnexa = "mnexa.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mnexa"]

[tool.hatch.build.targets.wheel.force-include]
"src/mnexa/templates/CLAUDE.md" = "mnexa/templates/CLAUDE.md"
"src/mnexa/templates/index.md" = "mnexa/templates/index.md"
"src/mnexa/templates/gitignore" = "mnexa/templates/gitignore"
"src/mnexa/prompts/stage1.md" = "mnexa/prompts/stage1.md"
"src/mnexa/prompts/stage2.md" = "mnexa/prompts/stage2.md"
"src/mnexa/prompts/query.md" = "mnexa/prompts/query.md"
"src/mnexa/prompts/lint.md" = "mnexa/prompts/lint.md"

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.50"]
pdf = ["pdfplumber>=0.11"]
docx = ["python-docx>=1.1"]
drive = [
    "google-api-python-client>=2.140",
    "google-auth-oauthlib>=1.2",
    "google-auth-httplib2>=0.2",
]
granola = ["httpx>=0.27"]
github = ["httpx>=0.27"]

[dependency-groups]
dev = [
    "pyright>=1.1.380",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "types-pyyaml>=6.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
    "PTH",  # use pathlib
    "TID",  # tidy imports
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = "warning"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
